--- a/content/4_Thong_ke_mo_ta.tex
+++ b/content/4_Thong_ke_mo_ta.tex
@@ -79,18 +79,18 @@ Với những hình ảnh có những chấm màu xanh là chưa xóa ngoại la
 *Nhận xét: \\
 •	Hai biến order\_price và coupon\_discount là 2 biến có ảnh hưởng tới order\_total hay còn gọi là có quan hệ tuyến tính.\\
 •	Hai biến delivery\_charges và distance\_to\_nearest\_warehouse không có ảnh hưởng tới order\_total hay không có quan hệ tuyến tính.
-\subsubsection{Phân tích biến định lượng bằng biểu đồ boxplot}
+\subsubsection{Phân tích biến định tính bằng biểu đồ boxplot}
 Ta phân tích biến order\_total theo các biến nearest\_warehouse, season, is\_expedited\_delivery, is\_happy\_customer.
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\linewidth]{graphics/bang13.jpg}
-    \caption{Biểu đồ boxplot chưa xóa ngoại lai của các biến định lượng}
+    \caption{Biểu đồ boxplot chưa xóa ngoại lai của các biến định tính}
     
 \end{figure}
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\linewidth]{graphics/bang14.jpg}
-    \caption{Biểu đồ boxplot đã xóa ngoại lai của các biến định lượng}
+    \caption{Biểu đồ boxplot đã xóa ngoại lai của các biến định tính}
     
 \end{figure}
 *Nhận xét: lần lượt cho  nearest\_warehouse, season, is\_expedited\_delivery, is\_happy\_customer.\\
