--- a/content/5_Thong_ke_suy_dien/1_ANOVA_mot_nhan_to.tex
+++ b/content/5_Thong_ke_suy_dien/1_ANOVA_mot_nhan_to.tex
@@ -5,7 +5,6 @@ Dữ liệu:
     \item Y: là một biến phụ thuộc (có tính liên tục).
     \item X: là một biến nhân tố hay biến giải thích (có tính phân loại).
 \end{itemize}
-
 Mục tiêu:
 \begin{itemize}
     \item Đánh giá xem biến nhân tố X có ảnh hưởng đến biến phụ thuộc Y hay không?
@@ -17,42 +16,22 @@ Mục tiêu:
         H_{1}: \exists i, j \text{ sao cho } \mu_{i} \neq \mu_{j}
         \]
 \end{itemize}
-Chúng em quyết định sẽ kiểm định xem, việc các mùa (season) sẽ ảnh hưởng như thế nào đến phí giao hàng (order\_total) bằng phương pháp phân tích phương sai ANOVA một nhân tố. Dưới đây là phân tích phương sai ANOVA một nhân tố cho mẫu thống kê ( hàm phân tích đã được tích hợp sẵn trong R) :
+%mùa ảnh hưởng tới phí giao hàng
+Chúng em quyết định sẽ kiểm định xem, việc các mùa (season) sẽ ảnh hưởng như thế nào đến phí giao hàng (delivery\_charges) bằng phương pháp phân tích phương sai ANOVA một nhân tố. Dưới đây là phân tích phương sai ANOVA một nhân tố cho mẫu thống kê ( hàm phân tích đã được tích hợp sẵn trong R) :
 
 \begin{figure}[!htbp]
     \centering
     \includegraphics[width=0.4\linewidth]{graphics/5.3.1.png}
-    \caption{Phân tích phương sai ANOVA xét sự ảnh hưởng của mùa (season) đến phí giao hàng(order\_total)}
+    \caption{Phân tích phương sai ANOVA xét sự ảnh hưởng của mùa (season) đến phí giao hàng(delivery\_charges)}
 \end{figure}
 
-Xem hình trên ta thấy kết quả, giá trị p-value (tức Pr(>F)) là  lớn hơn ngưỡng ý nghĩa phổ biến (0.05). Do đó, nhóm không đủ bằng chứng thống kê để kết luận rằng, chiết khấu (coupon\_discount) có ảnh hưởng đến giá trị đơn hàng (order\_price). Nói cách khác, sự khác biệt về giá trị đơn hàng giữa các nhóm chiết khấu có thể do yếu tố ngẫu nhiên.
-Cũng trên bảng phân tích gọn (Hình 5.1),  số lượng mặt hàng (count) theo từng loại chiết khấu (coupon\_discount) cũng  không sai lệch quá lớn ( khoảng lệch giữa giá trị nhỏ nhất và lớn nhất theo giá trị lớn nhất chỉ là 8.654\%), điều này càng cũng cố tính chính xác của phương pháp.
-nhóm có thể tính toán kích thước hiệu ứng (effect size) để đánh giá mức độ ảnh hưởng của một yếu tố (biến độc lập). Sử dụng Enhóm-squared (ɳ2) đo lường mức độ ảnh hưởng của coupon\_discount. Diễn dãy mở rộng (Field, 2013):
+Xem hình trên ta thấy kết quả, giá trị p-value (tức Pr(>F)) là rất nhỏ hơn ngưỡng ý nghĩa phổ biến (0.05). Do đó, có đủ bằng chứng thống kê rất mạnh để kết luận rằng, các mùa (season) có ảnh hưởng rất mạng đến phí giao hàng (delivery\_charges). Nói cách khác, sự khác biệt về phí giao hàng giữa các mùa không có yếu tố ngẫu nhiên.
 
-\begin{table}[ht]
-    \centering
-    \begin{tabular}{|c|c|}
-    \hline
-    \textbf{Khoảng giá trị ($\eta^2$)} & \textbf{Mức độ ảnh hưởng} \\ 
-    \hline
-    $\eta^2 < 0.01$ & Không đáng kể (negligible) \\ 
-    \hline
-    $0.01 \leq \eta^2 < 0.04$ & Nhỏ (small effect) \\ 
-    \hline
-    $0.04 \leq \eta^2 < 0.09$ & Vừa phải (moderate effect) \\ 
-    \hline
-    $\eta^2 \geq 0.09$ & Lớn (large effect) \\ 
-    \hline
-    \end{tabular}
-    \caption{Bảng mô tả mức độ ảnh hưởng theo giá trị $\eta^2$}
-    \label{table:effect_size}
-\end{table}
+%yêu cầu giao hàng nhanh ảnh hưởng tới phí giao hàng
 
-Thực hiện trên R (hàm tích hợp sẵn) :
+Chúng em quyết định sẽ kiểm định xem, việc khách hàng yêu cầu giao hàng nhanh (is\_expedited\_delivery) sẽ ảnh hưởng như thế nào đến phí giao hàng (delivery\_charges) bằng phương pháp phân tích phương sai ANOVA một nhân tố. Dưới đây là phân tích phương sai ANOVA một nhân tố cho mẫu thống kê ( hàm phân tích đã được tích hợp sẵn trong R) :
 \begin{figure}[!htbp]
     \centering
-    \includegraphics[width=0.6\linewidth]{graphics/5.3.3.png}
-    \caption{Phân tích phương sai ANOVA xét sự ảnh hưởng của chiếc khấu (coupon\_discount) đến giá mặt hàng (order\_price)}
+    \includegraphics[width=0.4\linewidth]{graphics/5.3.1.png}
+    \caption{Phân tích phương sai ANOVA xét sự ảnh hưởng của mùa (season) đến phí giao hàng(delivery\_charges)}
 \end{figure}
-
-Có thể thấy, giá trị ɳ2  của  coupon\_discount  tính trong thống kê rất nhỏ (0.001170329 <0.01), điều này nói lên được mức độ ảnh hưởng của chiết khấu (coupon\_discount) đến giá trị đơn hàng (order\_price) là không đáng kể.
