--- a/content/5_Thong_ke_suy_dien/2_ANOVA_hai_nhan_to.tex
+++ b/content/5_Thong_ke_suy_dien/2_ANOVA_hai_nhan_to.tex
@@ -19,6 +19,7 @@ Giả thiết thống kê được thực hiện với mức ý nghĩa $\alpha =
             H_{1A}: \tau_{i} \neq  0 \text{ với ít nhất một i }
             \]
     \end{itemize}
+    Các mùa (season) có ảnh hưởng rất mạnh đến phí giao hàng (delivery\_charges).
     
     \item Kiểm định yếu tố B (season)
     \begin{itemize}
@@ -31,6 +32,7 @@ Giả thiết thống kê được thực hiện với mức ý nghĩa $\alpha =
             H_{1B}: \beta_{j} \neq  0 \text{ với ít nhất một j }
             \]
     \end{itemize}
+    Việc khách hàng yêu cầu giao hàng nhanh (is\_expedited\_delivery) có ảnh hưởng rất mạnh đến phí giao hàng (delivery\_charges).
     \item Đối với tương tác giữa A và B  
     \begin{itemize}
         \item Đánh giá xem các biến nhân tố A và B có tương tác với nhau hay không?
